--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ nav a:visited {
 
 nav a:hover,
 nav a:active {
-    background-color: #b1461f;
-    color: #dfb666;
+    background-color: #white;
+    color: #lightwhite;
 }
 #thisPage {
     background-color: #9d7010;
