--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ nav a:visited {
 nav a:hover,
 nav a:active {
     background-color: #white;
-    color: #lightwhite;
+    color: #white;
 }
 #thisPage {
     background-color: #9d7010;
