--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav a:visited {
 
 nav a:hover,
 nav a:active {
-    background-color: #white;
+    background-color: #black;
     color: #white;
 }
 #thisPage {
