--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ nav a:visited {
 
 nav a:hover,
 nav a:active {
-    background-color: #black;
-    color: #white;
+    background-color: black;
+    color: white;
 }
 #thisPage {
     background-color: #9d7010;
