--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ nav a:active {
     color: white;
 }
 #thisPage {
-    background-color: #9d7010;
-    color: #ebe6dc;
+    background-color: white;
+    color: white;
 }
 
 h1,
