--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ nav a:active {
     color: white;
 }
 #thisPage {
-    background-color: white;
-    color: white;
+    background-color: gray;
+    color: gray;
 }
 
 h1,
